[project]
name = "genai-rag-cohort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "pypdf>=5.5.0",
]
